style.css
@font-face {
    font-family: "General-Font-Family";
    src: url("./assets/fonts/AmazingKids.otf");
}

.container{
    
    display: flex;
    align-items: center;
    justify-content: center;
    height: 80vh;
    margin-top: 4rem;
    font-size: 3rem;
}

.timer-container{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 350px;
    border: 7px solid black;
    border-radius: 8px;
    height: 350px;
}

.image{
   width: 300px;
   position: absolute;
   top: -140px;
   left: 27px;
}

.header{
    font-family: "General-Font-Family";
    text-transform: uppercase;
}

.time{
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bold;
    display: flex;
    margin-top: 1rem;
}

.buttons{
    display: flex;
    gap: 1.3rem;
    margin-top: 1rem;
    
}

button{
    cursor: pointer;
    padding: 10px 20px;
    border: none;
    border-radius: 8px;
    color: white;
    font-weight: bold;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.hour{
    position: relative;
    width: 20px;
    padding: 0 5px;
    
}
.hour::before{
    content: "HOUR";
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
    
}
.minute{
    position: relative;
    padding: 0 10px;
    
}
.minute::before{
    content: "MINUTE";
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
    
}
.second{
    position: relative;
    padding: 0 10px;
    
}
.second::before{
    content: "SECOND";
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
}
.splite-second{
    position: relative;
    display: block;
    width: 60px;
    text-align: center;
}
.splite-second::before{
    content: "CENTISECOND";
    text-align: center;
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
}

.start,
.stop,
.clear{

    cursor: pointer;
    display:flex ;
    flex-direction: column;
    font-size: 1rem;
    font-weight: bold;
    align-items: center;
    position: relative;
}

.start::after{
    position: absolute;
    content: "START";
    bottom:12px ;
    font-size: 0.8rem;
    color:white;
    left: 25px;
    font-weight: bolder;
}
.stop::after{
    position: absolute;
    content: "STOP";
    bottom:11px ;
    font-size: 0.8rem;
    color:white;
    left: 20px;
    font-weight: bolder;
}
.clear::after{
    position: absolute;
    content: "CLEAR";
    bottom:12px ;
    font-size: 0.8rem;
    color:white;
    left: 9px;
    font-weight: bolder;
}

